chore: add notion id for projects
