# docs/swagger.json
@@ -4641,6 +4641,20 @@
                 }
             }
         },
+        "model.Digest": {
+            "type": "object",
+            "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Earn": {
             "type": "object",
             "properties": {
@@ -5100,6 +5114,29 @@
                 },
                 "stronglyDisagree": {
                     "type": "integer"
+                }
+            }
+        },
+        "model.Memo": {
+            "type": "object",
+            "properties": {
+                "author": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
                 }
             }
         },
@@ -5662,6 +5699,23 @@
                 }
             }
         },
+        "model.Update": {
+            "type": "object",
+            "properties": {
+                "audience": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
         "model.Valuation": {
             "type": "object",
             "properties": {
@@ -5918,6 +5972,9 @@
                     }
                 },
                 "name": {
+                    "type": "string"
+                },
+                "notionID": {
                     "type": "string"
                 },
                 "projectEmail": {
@@ -6366,6 +6423,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "notionID": {
                     "type": "string"
                 },
                 "stacks": {
@@ -8029,6 +8089,9 @@
                 "name": {
                     "type": "string"
                 },
+                "notionID": {
+                    "type": "string"
+                },
                 "projectEmail": {
                     "type": "string"
                 },
@@ -8768,6 +8831,9 @@
                     "type": "string"
                 },
                 "name": {
+                    "type": "string"
+                },
+                "notionID": {
                     "type": "string"
                 },
                 "stacks": {
