# pkg/handler/project/request/request.go
@@ -24,6 +24,7 @@ type UpdateProjectGeneralInfoInput struct {
 	StartDate string       `form:"startDate" json:"startDate"`
 	CountryID model.UUID   `form:"countryID" json:"countryID" binding:"required"`
 	Function  string       `form:"function" json:"function" binding:"required"`
+	NotionID  model.UUID   `form:"notionID" json:"notionID"`
 	Stacks    []model.UUID `form:"stacks" json:"stacks"`
 }
 
@@ -82,6 +83,7 @@ type CreateProjectInput struct {
 	ProjectEmail      string              `form:"projectEmail" json:"projectEmail"`
 	Code              string              `form:"code" json:"code"`
 	Function          string              `form:"function" json:"function" binding:"required"`
+	NotionID          model.UUID          `form:"notionID" json:"notionID"`
 }
 
 func (i *CreateProjectInput) Validate() error {
